# unistore

./: Cargo.toml  README.md
examples/: derive.rs  prefix.rs  simple.rs
src/: index.rs  item.rs  key.rs  lib.rs  native.rs  tests.rs  wasm.rs
src/native/: serializer.rs
unistore_derive/: Cargo.toml
unistore_derive/src/: lib.rs
