[package]
name = "unistore"
version = "0.2.0"
edition = "2024"
authors = ["Manuel Philipp"]
description = "simple storage abstraction that works on wasm and native Targets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MnlPhlp/unistore"

[workspace]
resolver = "2"
members = [
    "./unistore_derive"
]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
async-std = { version = "1.13.1", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false, features = ["std", "executor"] }
tracing = "0.1.41"

unistore_derive = { path = "./unistore_derive" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
idb = "0.6.4"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
thread_local = "1.1.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fjall = "2.11.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
rmp-serde = "1.3.0"
robius-directories = "5.0.1"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
