[package]
name = "unistore_derive"
version = "0.2.0"
edition = "2024"
authors = ["Manuel Philipp"]
description = "derive macro for unistore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MnlPhlp/unistore"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.103"
proc-macro2 = "1.0.95"
proc-macro-error = "1.0.4"
